# trustify-product-label-poc

./: .gitignore  Cargo.toml  README.md  output.txt
src/: main.rs
