[package]
name = "trustify-label-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
glob = "0.3"

sbom-walker = { version = "0.14.2", default-features = false, features = ["spdx-rs", "crypto-openssl"] }
walker-common = { version = "0.14.2", features = ["bzip2-rs"] }
spdx-rs = "0.5"
#serde_json = "1"
simd-json = "0.16.0"
bytes = "1"
cpe = "0.1.5"
parking_lot = "0.12"
rayon = "1"
indicatif = { version = "0.18.0", features = ["rayon"] }
